Page layout update

--- a/css/style.css
+++ b/css/style.css
@@ -601,7 +601,7 @@
     height: 100%;
     top: 0;
     left: 0;
-    background: var(--bs-secondary);
+    background: #eb2f06;
     z-index: 2;
 }
 
