--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -1,7 +1,7 @@
 /******* Customized Bootstrap ********/
 
 $primary: #001659;
-$secondary: #FF5E15;
+$secondary: #b71540;
 $light: #F2F3F5;
 $dark: #001248;
 
